--- a/about/services.html
+++ b/about/services.html
@@ -92,7 +92,7 @@
               <div class="about-two-icon"><img src="../images/Creative-Webflow.png" loading="lazy" width="110" alt="Creative Webflow"></div>
               <div class="about-two-icon-text">
                 <h3>Protección confiable</h3>
-                <p>Duis gravida augue velit - eu dignissim felis posuere quis integ ante urna.</p>
+                <p>Duis gravida augue velit - eu dignissim felis posuere quis integ ante urna quis integ ante urna .</p>
               </div>
             </div>
             <div class="about-two-icon-box">
