--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-wf-page="6425b96c87da2c4d1e1e733d" data-wf-site="6425b96c87da2ce2ac1e72ba" lang="en">
+<html data-wf-page="6425b96c87da2c4d1e1e733d" data-wf-site="6425b96c87da2ce2ac1e72ba" lang="es">
 <head>
   <meta charset="utf-8">
   <title>Acceso Correcto | Seguridad en tu casa</title>
