--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       </div>
     </div>
   </section>
-  <div class="tracking-software-wave"><img src="images/Tracking-Wave-Three.svg" loading="lazy" alt="Wave"></div>
+  <div class="tracking-software-wave"></div>
   <section class="app-builder-process wf-section">
       <div class="app-builder-process-client-block">
         <div class="app-builder-process-main">
@@ -313,47 +313,7 @@
       </div>
     </div>
   </section>
-  
-  <section class="wf-section">
-
-    <div class="contact-address-section">
-      <div>
-        <h2 class="align-center padding-bottom-ten">¡Estemos en contacto!</h2>
-      </div>
-      <div class="w-layout-grid contact-address-grid">
-        <div class="contact-address-grid-block border-radius-twenty">
-          <div class="contact-address-grid-icon-box">
-            <div class="contact-address-grid-text-wrapper">
-              <div class="contact-text padding-bottom-ten">Envíanos un correo</div>
-              <a href="mailto:info@accesocorrecto.com" class="body-font-number-bold underline">info@accesocorrecto.com</a>
-            </div>
-          </div>
-        </div>
-        <div class="contact-address-grid-block border-radius-twenty">
-          <div class="contact-address-grid-icon-box">
-            
-            <div class="contact-address-grid-text-wrapper">
-              <div class="contact-text padding-bottom-ten">¡Llamanos!</div>
-              <a href="tel:+52 (999) 481-0748" class="body-font-number-bold underline">+52 (999) 481 0748</a>
-            </div>
-          </div>
-        </div>
-        <div id="w-node-cd5b10f6-7764-957a-9373-005dddbfe101-60441e2a" class="contact-address-grid-block border-radius-twenty">
-          <div class="contact-address-grid-icon-box">
-            <div class="contact-address-grid-text-wrapper">
-              <div class="contact-text padding-bottom-ten">Redes sociales</div>
-              <div class="footer-sub-block-one-social padding-top-ten">
-                <a role="button" href="https://www.facebook.com/" target="_blank" class="w-inline-block"><img src="images/fb-icon.png" loading="lazy" alt="Facebook"></a>
-                <a role="button" href="https://linkedin.com/" target="_blank" class="w-inline-block"><img src="images/ln-icon.png" loading="lazy" alt="Linkedin"></a>
-                <a role="button" href="http://youtube.com" target="_blank" class="w-inline-block"><img src="images/yt-icon.png" loading="lazy" alt="Youtube"></a>
-                <a role="button" href="https://www.instagram.com/" target="_blank" class="w-inline-block"><img src="images/ig-icon.png" loading="lazy" alt="Instagram"></a>
-              </div>
-            </div>
-          </div>
-        </div>
-     </div>
-     
-    <div class="contact-hero-section-container w-container tracking-software-innovative-gps">
+    <div class="contact-hero-section-container w-container wf-section">
       <div>
         <div class="contact-hero-section-title-wrapper ">
           <h2 class="align-center padding-bottom-ten">Servicios de seguridad para proteger tus activos</h2>
@@ -369,7 +329,6 @@
                 <p class="padding-bottom-thirty">Completa nuestro formulario y uno de nuestros especialistas te llamará de inmediato para ofrecerte información valiosa y responder cualquier pregunta que tengas. </p>
               </div>
             </div>
-            <div class="contact-main-image"><img class="border-radius-twenty auto-fit full-width-image" src="../images/Contact-Image-Two.webp" width="380" height="293" alt="Need Assistance" style="opacity:0" sizes="(max-width: 479px) 94vw, (max-width: 767px) 96vw, (max-width: 991px) 97vw, 380px" data-w-id="9165ccec-b20e-943e-0ca7-7138762089cd" loading="lazy" srcset="../images/Contact-Image-Two-p-500.webp 500w, ../images/Contact-Image-Two.webp 760w"></div>
           </div>
           <div class="contact-main-form border-radius-twenty">
             <div>
