--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html data-wf-page="6425b96c87da2c4d1e1e733d" data-wf-site="6425b96c87da2ce2ac1e72ba" lang="es">
 <head>
   <meta charset="utf-8">
-  <title>Acceso Correcto | Seguridad en tu casa</title>
-  <meta content="Sastek is the unique Android / IOS development app development template that is simply smart flexible &amp; the easy-to-use tracking-software solution immediately." name="description">
-  <meta content="Tracking Software - Sastek" property="og:title">
-  <meta content="Sastek is the unique Android / IOS development app development template that is simply smart flexible &amp; the easy-to-use tracking-software solution immediately." property="og:description">
-  <meta content="Tracking Software - Sastek" property="twitter:title">
-  <meta content="Sastek is the unique Android / IOS development app development template that is simply smart flexible &amp; the easy-to-use tracking-software solution immediately." property="twitter:description">
+  <title>Acceso Correcto | Vigila tu negocio en todo momento</title>
+  <meta content="Acceso Correcto | Sistemas de seguridad cómo interfon, departamentos &amp; cercas electricas, e instalación de videovigilancia. " name="description">
+  <meta content="Acceso Correcto" property="og:title">
+  <meta content="¡Haz de tu negocio un lugar seguro!  &amp; Instalamos cercas electricas, cámaras de videovigilancia, sistemas de interfon, y más" property="og:description">
+  <meta content="Acceso Correcto" property="twitter:title">
+  <meta content="¡Cotiza y asegura tu negocio! &amp; Servicios de TI Empresariales, Redes, Voz y Datos, Seguridad electrónica, Control de acceso y automoización" property="twitter:description">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -103,10 +103,10 @@
             <div class="heading-top padding-bottom-ten">Acceso Correcto</div>
           </div>
           <div class="overflow padding-bottom-twenty">
-            <h1 data-w-id="225e56c4-f88a-e1ee-87ad-9d571ac5eaaf" style="opacity:0">Soluciones tecnológicas para hogares y empresas</h1>
+            <h1 data-w-id="225e56c4-f88a-e1ee-87ad-9d571ac5eaaf" style="opacity:0">Soluciones de seguridad para tu negocio</h1>
           </div>
           <div class="app-development-hero-section-paragraph-wrapper overflow padding-bottom-twenty">
-            <p data-w-id="3e629407-6d5e-4f80-6bbb-1cb625840e16" style="opacity:0">Nuestro equipo de expertos altamente capacitados está a tu dispocisión para brindar soporte técnico y asistencia personalizada en todo momento.</p>
+            <p data-w-id="3e629407-6d5e-4f80-6bbb-1cb625840e16" style="opacity:0">Nuestro equipo de expertos altamente capacitados está a tu dispocisión para brindar soporte técnico y asistencia personalizada en todo momento acerca de nuestras instalaciones de seguridad.</p>
           </div>
           <div class="tracking-software-hero-button-wrapper">
             <a role="button" href="https://www.apple.com/in/app-store/" target="_blank" class="w-inline-block"><img src="images/cotizar-app.png" loading="lazy" alt="Download App"></a>
@@ -160,10 +160,10 @@
         <div class="app-builder-process-main">
           <div class="app-builder-process-text-block">
             <div class="overflow">
-              <h2 class="padding-bottom-ten">Ofrece seguridad a tu empresa</h2>
+              <h2 class="padding-bottom-ten">Sistema de seguridad para tu negocio</h2>
             </div>
             <div class="overflow">
-              <p class="color-black">Ofrecemos servicios de seguridad personalizados para cada cliente con opciones como cámaras, intercomunicadores, portones electronicas, cercas protegidas. </p>
+              <p class="color-black">Opciones como cámaras, intercomunicadores, portones electronicas, cercas protegidas, y más. Te podemos brindar en Acceso Correcto </p>
               <input type="submit" value="Informacion" class="button-main w-button">
 
             </div>
@@ -196,23 +196,23 @@
       <div class="carousel-item">
         <img src="https://static.vecteezy.com/system/resources/previews/009/384/829/non_2x/surveillance-camera-clipart-design-illustration-free-png.png" alt="Cámara seguridad">
         <div class="carousel-content">
-          <h3>Producto/Servicio 1</h3>
-          <p>Breve descripción del producto o servicio.</p>
+          <h3>Cámaras de seguridad</h3>
+          <p>Previene delitos con la supervisión y control que te ofrece las cámaras de seguridad</p>
           <a href="#">Más información</a>
         </div>
       </div>
       <div class="carousel-item">
         <img src="https://static.vecteezy.com/system/resources/previews/009/384/829/non_2x/surveillance-camera-clipart-design-illustration-free-png.png" alt="Imagen 2">
         <div class="carousel-content">
-          <h3>Producto/Servicio 2</h3>
-          <p>Breve descripción del producto o servicio.</p>
+          <h3>Control de Acceso</h3>
+          <p>Controla las entradas y sálidas de personal autorizado en todo momento.</p>
           <a href="#">Más información</a>
         </div>
       </div>
       <div class="carousel-item">
         <img src="https://static.vecteezy.com/system/resources/previews/009/384/829/non_2x/surveillance-camera-clipart-design-illustration-free-png.png" alt="Imagen 3">
         <div class="carousel-content">
-          <h3>Producto/Servicio 3</h3>
+          <h3>Interfon y Videoporteros</h3>
           <p>Breve descripción del producto o servicio.</p>
           <a href="#">Más información</a>
         </div>
