--- a/about/Nosotros.html
+++ b/about/Nosotros.html
@@ -86,7 +86,7 @@
             <div class="heading-top">Acerca de Acceso Correcto</div>
           </div>
           <div class="overflow">
-            <h1 class="padding-bottom-twenty">Integramos seguridad a los hogares y empresas</h1>
+            <h1 class="padding-bottom-twenty">Integramos seguridad en tu empresa.</h1>
           </div>
           
           <a href="../about/about-two.html" class="button-main w-button">Llamar</a>
@@ -98,11 +98,7 @@
           </div>
         </div>
       </div>
-      <div class="about-marquee">
-        <div class="marquee-wrapper">
-          <div class="marquee"><img src="../images/Data-Tech.webp" loading="lazy" width="210" height="56" alt="Tech Land" class="auto-fit"><img src="../images/Manguse.webp" loading="lazy" width="210" height="56" alt="Start Up" class="auto-fit"><img src="../images/Zoomin.webp" loading="lazy" width="210" height="56" alt="Wobays" class="auto-fit"><img src="../images/Northstar.webp" loading="lazy" width="210" height="56" alt="Techland" class="auto-fit"><img src="../images/Blue-Bows.webp" loading="lazy" width="210" height="56" alt="Dealrta" class="auto-fit"></div>
-          <div class="marquee"><img src="../images/Data-Tech.webp" loading="lazy" width="210" height="56" alt="Tech Land" class="auto-fit"><img src="../images/Manguse.webp" loading="lazy" width="210" height="56" alt="Start Up" class="auto-fit"><img src="../images/Zoomin.webp" loading="lazy" width="210" height="56" alt="Wobays" class="auto-fit"><img src="../images/Northstar.webp" loading="lazy" width="210" height="56" alt="Techland" class="auto-fit"><img src="../images/Blue-Bows.webp" loading="lazy" width="210" height="56" alt="Dealrta" class="auto-fit"></div>
-        </div>
+      
       </div>
     </div>
   </section><img src="../images/About-Wave02.svg" loading="lazy" alt="Wave" class="wave-one">
@@ -167,22 +163,24 @@
             <h2 class="padding-bottom-ten">Estamos trabajando para mantener tu seguridad</h2>
           </div>
           <div class="about-online-retail-para-wrapper">
-            <p class="padding-bottom-twenty-about">Duis gravida augue velit eu dignissim felis posuere quis. Integ ante urna gravida nec est in molestie mattis risus tempus tincidunt maximus. Praesent eget erat non mi tincidunt lobortis.</p>
+            <p class="padding-bottom-twenty-about">Acceso Correcto se fundo con el objetivo de poder brindar servicios de seguridad para las empresas que buscan proteger su mobiliario. Trabajar con nosotros te brindará
+              tranquilidad.
+            </p>
           </div>
           <div class="about-online-retail-grid-main">
             <div class="w-layout-grid about-online-retail-grid">
               <div id="w-node-e463886d-cb4c-2f62-395e-821c5cf5ef37-761e72fa" class="about-online-retail-grid-block">
                 <div class="about-online-retail-grid-icon"><img src="../images/Red-Check.svg" loading="lazy" alt="Check"></div>
                 <div>
-                  <h3>Ahorra tiempo</h3>
-                  <p>Proin vulputate turpis et velit blandit faucibus. Duis elementum viverra eros vel congue. Mauris eget lorem massa.</p>
+                  <h3>Previene delitos</h3>
+                  <p>Tendrás la información de tus cámaras de seguridad gracias a nuestros sensores de captamiento, te permiten saber cuándo alguien ha ingresado a tu oficina.</p>
                 </div>
               </div>
               <div id="w-node-_462438b1-20d7-7186-0417-79a5d0e165d9-761e72fa" class="about-online-retail-grid-block">
                 <div class="about-online-retail-grid-icon"><img src="../images/Blue-Check.svg" loading="lazy" alt="Check"></div>
                 <div>
-                  <h3>Monitorea tu hogar y/o oficina </h3>
-                  <p>Proin vulputate turpis et velit blandit faucibus. Duis elementum viverra eros vel congue. Mauris eget lorem massa.</p>
+                  <h3>Ten alertas 24/7</h3>
+                  <p>Estarás conectado remotamente desde tu dispositivo, donde te llegarán notificaciones cuándo surja algún movimiento.</p>
                 </div>
               </div>
             </div>
@@ -192,65 +190,13 @@
     </div>
   </section>
 
-  <section class="wf-section">
-    <div class="about-two-tending-app-container w-container">
-      <div>
-        <div class="overflow">
-          <div class="heading-top align-center padding-bottom-ten">Nuestros servicios</div>
-        </div>
-        <div class="about-two-tending-app-title-wrapper">
-          <h2 class="align-center padding-bottom-ten">Observa en tiempo real lo que sucede en tu casa</h2>
-        </div>
-        <div>
-          <div class="w-layout-grid about-two-tending-app-grid">
-            <div id="w-node-_8a5f3a34-7d00-bc2b-e42d-11a9184e8747-ff1e72fb">
-              <div class="about-two-tending-app-image-wrapper border-radius-twenty"><img src="../images/camarasseguridad.jpg" loading="lazy" sizes="(max-width: 479px) 94vw, (max-width: 767px) 96vw, (max-width: 991px) 97vw, 410px" srcset="../images/camarasseguridad.jpg 500w, ../images/Manage-Product-p-800.webp 800w, ../images/Manage-Product.webp 820w" alt="Manage Product" class="about-two-tending-app-image border-radius-twenty"></div>
-              <div class="about-two-tending-app-icon-title-wrapper">
-                <div><img src="../images/Manage-Product.svg" loading="lazy" alt="Manage Product"></div>
-                <div class="about-two-tending-app-icon-title">
-                  <h3 class="change-height">Cámaras de vigilancia</h3>
-                </div>
-              </div>
-              <div>
-                <p>Proin vulputate turpis et velit blandit faucib. Duis elemt viverra eros sagittis lorem quis tincid.</p>
-              </div>
-            </div>
-            <div id="w-node-_457647bd-45e0-5926-d4ba-0e97367d2acd-ff1e72fb">
-              <div class="about-two-tending-app-image-wrapper border-radius-twenty"><img src="../images/System-Issue.webp" loading="lazy" sizes="(max-width: 479px) 94vw, (max-width: 767px) 96vw, (max-width: 991px) 97vw, 410px" srcset="../images/portonelectrico.jpg 500w, ../images/portonelectrico.jpg 800w, ../images/System-Issue.webp 820w" alt="System Issue" class="about-two-tending-app-image border-radius-twenty"></div>
-              <div class="about-two-tending-app-icon-title-wrapper">
-                <div><img src="../images/Fix-Issue.svg" loading="lazy" alt="Fix Issue"></div>
-                <div class="about-two-tending-app-icon-title">
-                  <h3 class="change-height">Portón eléctrico</h3>
-                </div>
-              </div>
-              <div>
-                <p>Donec nec leo risus. Mauris a mi congue, feugiat lacus ac congue purus tempus rhoncus.</p>
-              </div>
-            </div>
-            <div id="w-node-eb253bb7-1a84-0b7d-38c1-a724c7d516de-ff1e72fb">
-              <div class="about-two-tending-app-image-wrapper border-radius-twenty"><img src="../images/App-Progress.webp" loading="lazy" sizes="(max-width: 479px) 94vw, (max-width: 767px) 96vw, (max-width: 991px) 97vw, 410px" srcset="../images/plumaelectrica.jpg 500w, ../images/App-Progress-p-800.webp 800w, ../images/App-Progress.webp 820w" alt="App Progress" class="about-two-tending-app-image border-radius-twenty"></div>
-              <div class="about-two-tending-app-icon-title-wrapper">
-                <div><img src="../images/App-Progress.svg" loading="lazy" alt="App Progress"></div>
-                <div class="about-two-tending-app-icon-title">
-                  <h3 class="change-height">Control vehícular</h3>
-                </div>
-              </div>
-              <div>
-                <p>Curabitur malesuada libero nec nunc dapibus fringil iaculis id id leo lacinia quis blandit.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
+  
   <section class="about-query wf-section">
     <div class="about-query-container w-container">
       <div class="about-query-main">
         <div class="about-query-text-block">
           <h2 class="padding-bottom-ten">¿Tienes alguna duda sobre la instalación?</h2>
-          <p class="padding-bottom-thirty">Suspendisse sed lacus ornare pretium neque nec ornare lacus. In non eros augue dapibus quam Maecenas lacini varius convall.</p>
+          <p class="padding-bottom-thirty">Consulta algunas de las preguntas más frecuentes que nos han realizado. Igualmente puedes comunicarte con un asesor que te atenderá tu duda. </p>
           <div class="about-query-accordion">
             <div data-w-id="7769db56-ab4f-f97f-a4f3-bc1c2ab1d698" class="accordion-three">
               <div data-w-id="7769db56-ab4f-f97f-a4f3-bc1c2ab1d699" class="accordion-three-title">
@@ -261,7 +207,7 @@
                 </div>
               </div>
               <div class="accordion-three-description">
-                <p>Duis turpis neque laoreet sit amet ipsum quis lacinia vestibulum libero. Suspendisse feugiat lacus nec nisi feugiat dignissim. Etia ornare tincidunt felis nec facilisis libero cursus.</p>
+                <p>Ingresa a la aplicación e inicia sesión con la cuenta que te aportaron, ahí podrás monitorear tus cámaras de seguridad. <br> En caso que todavía no cuentes con la aplicación, comunicate con uno de nuestros asesores.</p>
               </div>
             </div>
             <div data-w-id="7769db56-ab4f-f97f-a4f3-bc1c2ab1d6a2" class="accordion-three">
