--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
   <div class="carousel-wrapper">
     <div class="carousel">
       <div class="carousel-item">
-        <img src="https://static.vecteezy.com/system/resources/previews/009/384/829/non_2x/surveillance-camera-clipart-design-illustration-free-png.png" alt="Cámara seguridad">
+        <img src="../AC_Web/images/cam_servicio.png" alt="Cámara seguridad">
         <div class="carousel-content">
           <h3>Cámaras de seguridad</h3>
           <p>Previene delitos con la supervisión y control que te ofrece las cámaras de seguridad</p>
@@ -202,7 +202,7 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img src="https://static.vecteezy.com/system/resources/previews/009/384/829/non_2x/surveillance-camera-clipart-design-illustration-free-png.png" alt="Imagen 2">
+        <img src="../AC_Web/images/acceso_servicio.png" alt="Imagen 2">
         <div class="carousel-content">
           <h3>Control de Acceso</h3>
           <p>Controla las entradas y sálidas de personal autorizado en todo momento.</p>
@@ -210,10 +210,10 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img src="https://static.vecteezy.com/system/resources/previews/009/384/829/non_2x/surveillance-camera-clipart-design-illustration-free-png.png" alt="Imagen 3">
+        <img src="../AC_Web/images/interfon_servicio.png" alt="Imagen 3">
         <div class="carousel-content">
           <h3>Interfon y Videoporteros</h3>
-          <p>Breve descripción del producto o servicio.</p>
+          <p>El uso de un videoportero te permite dar un vistazo con quien te comunicas de manera rápida y sencilla.</p>
           <a href="#">Más información</a>
         </div>
       </div>
@@ -258,16 +258,15 @@
   </div>
   <div class="card card2">
     <div class="card-content">
-      <h2>Título de la Carta 2</h2>
-      <p>Descripción de la Carta 2</p>
-      <a href="#" class="card-link">Enlace 2</a>
+      <h2>Comunícate con un asesor</h2>
+      <p>Toma asesoramiento con uno de nuestros técnicos especializados</p>
+      <a href="#" class="cta-button">Llamar</a>
     </div>
   </div>
   <div class="card card3">
     <div class="card-content">
-      <h2>Título de la Carta 3</h2>
-      <p>Descripción de la Carta 3</p>
-      <a href="#" class="card-link">Enlace 3</a>
+      <h2>Redes sociales</h2>
+      
     </div>
   </div>
 </div>
